# SO3-updation-VS-Quaternion-updation

./: CMakeLists.txt  L1Q2.cpp
